--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
     "react-icons": "^5.5.0",
+    "stripe": "^19.1.0",
     "swiper": "^12.0.2",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12",
@@ -34,6 +35,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/stripe-v3": "^3.1.33",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "tailwindcss": "^4",
